<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0096ff"
    tools:context=".HomeActivity">

    <RelativeLayout
        android:id="@+id/container"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/input_bg3"
        android:elevation="10dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/input_bg3"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/input_bg4"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/sunrise" />

                <TextView
                    android:id="@+id/Sunrise"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/sunrise"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sunriseTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_07_50_am"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg4"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/wind" />

                <TextView
                    android:id="@+id/Wind"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/wind_m_s"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="17sp" />

                <TextView
                    android:id="@+id/windSpeed"

                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_1000"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:background="@drawable/input_bg4"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/sunset" />

                <TextView
                    android:id="@+id/Sunset"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/sunset"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="18sp" />

                <TextView
                    android:id="@+id/sunsetTime"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_07_00_am"
                    android:textColor="@color/black"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="160dp"
            android:layout_marginLeft="10dp"
            android:layout_marginTop="180dp"
            android:layout_marginRight="10dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/input_bg3"
            android:elevation="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:background="@drawable/input_bg4"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/thermometer" />

                <TextView
                    android:id="@+id/humidity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/humidity"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="22sp" />

                <TextView
                    android:id="@+id/humidity_in_percentage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_100"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/input_bg4"
                android:elevation="10dp"
                android:gravity="center"
                android:orientation="vertical"
                android:paddingLeft="5dp"
                android:paddingTop="5dp"
                android:paddingRight="5dp"
                android:paddingBottom="5dp">

                <pl.droidsonroids.gif.GifImageView
                    android:layout_width="59dp"
                    android:layout_height="62dp"
                    android:layout_marginBottom="5dp"
                    android:src="@drawable/barometer" />

                <TextView
                    android:id="@+id/pressure"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:text="@string/pressure_hpa"
                    android:textAlignment="center"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/pressure_in_pascal"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/_10000"
                    android:textColor="@color/black"
                    android:textSize="22sp"
                    android:textStyle="bold" />
            </LinearLayout>
        </LinearLayout>
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/temperature_in_C"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/description"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/temperature"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/_25"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/u2103"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="50sp" />
    </LinearLayout>

    <TextView
        android:id="@+id/description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/container"
        android:layout_centerHorizontal="true"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/hiden"
        android:textColor="#AEABAB"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/City_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/temperature_in_C"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/cityName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/City_name"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="15dp"
        android:text="    \u22EE "
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="30sp"
        android:textStyle="bold" />
</RelativeLayout>